# renorm

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.claude-plugin/: marketplace.json  plugin.json
commands/: derive.md  paper.md  renorm.md
docs/superpowers/plans/: 2026-04-29-renorm-v0.1.md  2026-04-29-renorm-v0.2.md  2026-04-29-renorm-v0.3.md
docs/superpowers/specs/: 2026-04-29-renorm-design.md
scripts/: verify-cpp-template.sh  verify-julia-template.sh  verify-python-template.sh
skills/core/: SKILL.md
skills/derivation/: SKILL.md
skills/init-package/: SKILL.md
skills/init-package/templates/cpp/: .gitignore  CMakeLists.txt  README.md
skills/init-package/templates/cpp/include/__pkg__/: __pkg__.h
skills/init-package/templates/cpp/src/: __pkg__.cpp
skills/init-package/templates/cpp/tests/: test_main.cpp
skills/init-package/templates/julia/: .gitignore  Project.toml  README.md
skills/init-package/templates/julia/src/: __PkgPascal__.jl
skills/init-package/templates/julia/test/: runtests.jl
skills/init-package/templates/python/: .gitignore  README.md  pyproject.toml
skills/init-package/templates/python/src/__pkg__/: __init__.py  core.py
skills/init-package/templates/python/tests/: test_core.py
skills/paper-analysis/: SKILL.md
